@@ -2,7 +2,8 @@
 c52562bd0aabb86ce8ca177f22f8d0455769b444df2d4d62894faab63b7151d8  test/results/test00-x86-binary
 fab674644b9519e8ec39e254e6b13fe5eccb9f861f7d9e7d2f736d40875b7546  test/results/test01-knight-posix-binary
 eae96857f2b6d8e8ba86ac06e72345ea572622b358b23978bb5f2db1baadf41c  test/results/test01-x86-binary
-8ead336d2f3f72d5874230492e0472edec61d355905e8636e3dfb2731695037c  test/results/test02-binary
+1cd9bdf671f1b26992bb34eebb52c745a4af930b34ef0bb25348a243d0f219aa  test/results/test02-knight-posix-binary
+8ead336d2f3f72d5874230492e0472edec61d355905e8636e3dfb2731695037c  test/results/test02-x86-binary
 2313cb3f1a2b9eb6bf15f8d43418e15d6c16f7f1b5c22700fdfc2b38beb59192  test/results/test03-binary
 b7ddb37063c541c6a315809c4438aa235d6702f54bb64f4ffc88dbe78617de81  test/results/test04-binary
 4d4ec6247a7cc9062a5b3d8adfec7199476715446723a0b882268afe6daad1f3  test/results/test05-binary
@@ -11,7 +12,7 @@ a9a3e332d13ded5f80d7431f8717f26527b3722b33ea57760a9a5723dffc099c  test/results/t
 f1c01feb865c4d552033186d9ce50dd39468a7e8aebf762886c13ad3e03b5011  test/results/test08-binary
 3b39e72f3de90ed690adfaf6145af46157cef2ec5e72867ac577fa27a0229894  test/results/test09-binary
 020e86020819cc4963e6185b22e534fcf8306b6cb116f12643f254a24688ff0a  test/results/test10-binary
-0a6eca36e9eea6a72595906b3990a16a0433f5404a6add00d245f99fe6308f75  test/results/test100-binary
+3e1476dbe659f8e84d0b1b0fc303db70e5390f6fcb355002e19d90495726b92a  test/results/test100-binary
 3fd11bad4a426ce1ff8fd9c6d7d2b943effae9f3f5740b7376e426e9b0555851  test/results/test11-binary
 f98ab8e4bb35580e0dde96126d7a56aff66bda208d02c8d89390b40d6cff591c  test/results/test12-binary
 5051ffca2615144419f8ec1a5d4999486ae81e7781428f59e47e866af97cef92  test/results/test13-binary
